Added Eng localization

--- a/pages/localization/index_eng.html
+++ b/pages/localization/index_eng.html
@@ -1,6 +1,6 @@
 <!-- Add your content of head and header -->
 <!DOCTYPE html>
-<html lang="nl">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -13,12 +13,12 @@
     <!-- Disable tap highlight on IE -->
     <meta name="msapplication-tap-highlight" content="no">
 
-    <link href="./assets/apple-touch-icon.png" rel="apple-touch-icon">
-    <link href="./assets/favicon.ico" rel="icon">
+    <link href="../../assets/apple-touch-icon.png" rel="apple-touch-icon">
+    <link href="../../assets/favicon.ico" rel="icon">
 
     <title> Tanguy Bouckaert</title>
 
-    <link href="./main.97292821.css" rel="stylesheet">
+    <link href="../../main.97292821.css" rel="stylesheet">
 </head>
 
 <body>
@@ -37,23 +37,24 @@
                 </div>
 
                 <div class="navbar-collapse">
+
                     <ul class="nav navbar-nav navbar-left">
                         <li style="margin-right: 1em;">
-                            <a href="/pages/localization/index_eng.html" title="" class="btn btn-lg anchor-link">ENG</a>
+                            <a href="../../index.html" title="" class="btn btn-lg anchor-link">NL</a>
                         </li>
                     </ul>
 
                     <ul class="nav navbar-nav navbar-right">
                         <li style="margin-right: 1em;">
-                            <a href="./pages/AboutMe.html" title="" class="btn btn-lg anchor-link">Wie ben ik</a>
+                            <a href="../../pages/localization/AboutMe_eng.html" title="" class="btn btn-lg anchor-link">Who am I</a>
                         </li>
 
                         <li style="margin-right: 1em;">
-                            <a href="#Mijn_Skills" title="" class="btn btn-lg anchor-link">Mijn Skills</a>
+                            <a href="../../pages/localization/index_eng.html#MySkills" title="" class="btn btn-lg anchor-link">My Skills</a>
                         </li>
 
                         <li style="margin-right: 1em;">
-                            <a href="./index.html#contact_me" title="" class="btn btn-lg anchor-link">Contact Me</a>
+                            <a href="../../pages/localization/index_eng.html#contact_me" title="" class="btn btn-lg anchor-link">Contact Me</a>
                         </li>
                     </ul>
 
@@ -66,7 +67,7 @@
 
     <!-- Add your site or app content here -->
     <div class="background-image-container white-text-container"
-        style="background-image: url('./assets/images/DAE/GameArt.jpg')">
+        style="background-image: url('../../assets/images/DAE/GameArt.jpg')">
         <div class="overlay"></div>
         <div class="container">
             <div class="row">
@@ -84,7 +85,7 @@
         <div class="container">
             <div class="row blue">
                 <div class="col-xs-12 col-md-12 section-container-spacer">
-                    <h2 class="text-center">Projecten</h2>
+                    <h2 class="text-center">Projects</h2>
                 </div>
             </div>
             <div class="row">
@@ -92,39 +93,39 @@
                 <div class="col-xs-12 col-md-4">
                     <a href="https://tanguy-bouckaert.itch.io/into-the-depths" target="_blank">
                         <!-- Leeds to the devlog -->
-                        <img src="./assets/images/Games/IntoTheDepths.jpg" class="project-img"
-                            onmouseover="this.src='./assets/gifs/IntoTheDepths.gif'"
-                            onmouseleave="this.src='./assets/images/Games/IntoTheDepths.jpg'">
+                        <img src="../../assets/images/Games/IntoTheDepths.jpg" class="project-img"
+                            onmouseover="this.src='../../assets/gifs/IntoTheDepths.gif'"
+                            onmouseleave="this.src='../../assets/images/Games/IntoTheDepths.jpg'">
                     </a>
 
                     <h3 class="text-center">Into The Depths</h3>
-                    <p> Ik wou altijd al een gameboy game maken. Door de GB Jam heb ik een mogelijkheid gekregen om deze
-                        droom waar te maken. </p>
+                    <p> I always wanted to make a Gameboy game. The GB Jam has given me an opportunity to do this
+                        dream come true. 
+                    </p>
                 </div>
 
                 <!-- Project In Search Of Light -->
                 <div class="col-xs-12 col-md-4">
-                    <a href="./pages/Empty.html"> <!-- Leeds to the devlog -->
-                        <img src="./assets/images/Games/Unity.png" class="project-img">
+                    <a href="../../pages/Empty.html"> <!-- Leeds to the devlog -->
+                        <img src="../../assets/images/Games/Unity.png" class="project-img">
                     </a>
-                    <h3 class="text-center">[Niet gepupliceerde] <br> Plane Game </h3>
-                    <p>
-                        Dit is een zetel-coöp, waarbij je een vliegtuig bestuurt. 
-                        Het doel van het spel is om je vriend neer te schieten.
+                    <h3 class="text-center">[Not published] <br> Plane Game </h3>
+                    <p> 
+                        This is a couch co-op, where you controle a plane. The goal of the game is to shoot down your friend.
                     </p>
                 </div>
 
                 <!-- Project HighFive -->
                 <div class="col-xs-12 col-md-4">
                     <a href="https://tanguy-bouckaert.itch.io/five-a-space-adventure" target="_blank">
-                        <img src="./assets/images/Games/HighFiveSpaceGame.png" alt="" class="img-responsive"
-                            onmouseover="this.src='./assets/gifs/FiveSpaceAdventure.gif'"
-                            onmouseleave="this.src='./assets/images/Games/HighFiveSpaceGame.png'">
+                        <img src="../../assets/images/Games/HighFiveSpaceGame.png" alt="" class="img-responsive"
+                            onmouseover="this.src='../../assets/gifs/FiveSpaceAdventure.gif'"
+                            onmouseleave="this.src='../../assets/images/Games/HighFiveSpaceGame.png'">
                     </a>
                     <h3 class="text-center">Five: Space Adventure</h3>
                     <p>
-                        Dit was een klantproject waarbij we een leuk spel hebben gemaakt over dode hoeken van vrachtwagens. 
-                        Het is gemaakt voor smartphones, maar het werkt ook op pc.
+                        This was a client project where we had to make a fun game about blindspots of trucks. It's made for smartphones, 
+                        but it'll also work on your pc.
                     </p>
                 </div>
 
@@ -140,14 +141,14 @@
                 <!-- Project In Search Of Light -->
                 <div class="col-xs-12 col-md-4">
                     <a href="https://tanguy-bouckaert.itch.io/in-search-of-light" target="_blank" q>
-                        <img src="./assets/images/Games/InSearchOfLight.png" alt="" class="img-responsive"
-                            onmouseover="this.src='./assets/gifs/InSearchOfLight.gif'"
-                            onmouseleave="this.src='./assets/images/Games/InSearchOfLight.png'">
+                        <img src="../../assets/images/Games/InSearchOfLight.png" alt="" class="img-responsive"
+                            onmouseover="this.src='../../assets/gifs/InSearchOfLight.gif'"
+                            onmouseleave="this.src='../../assets/images/Games/InSearchOfLight.png'">
                     </a>
                     <h3 class="text-center">In Search Of Light</h3>
                     <p>
-                        "In Search Of Light" is een schoolproject, waarbij ik meerdere spel ideeën moesten prototypen om er dan
-                         één van uit te werken.
+                        In Search Of Light was a school project, where we had to prototype multiple game idea's and then eventual work out 
+                        one of them.
                     </p>
                 </div>
             </div>
@@ -160,7 +161,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-xs-12 col-md-12 section-container-spacer">
-                    <h2 class="text-center">Mijn Skills</h2>
+                    <h2 class="text-center">My Skills</h2>
                 </div>
             </div>
             <div class="row">
@@ -276,36 +277,42 @@
         <div class="container">
             <div class="row">
                 <div class="col-xs-12 col-md-12 section-container-spacer">
-                    <h2 class="text-center">Geplande & afgelopen activiteiten</h2>
+                    <h2 class="text-center">Plande & Expired activities</h2>
                 </div>
             </div>
             <div class="row">
                 <!--GameForce-->
                 <div class="col-xs-12 col-md-4">
                     <a href="https://be.gameforce.gg/">
-                        <img src="./assets/images/Events/GameForce_Banner.jpg" alt="" class="img-responsive">
+                        <img src="../../assets/images/Events/GameForce_Banner.jpg" alt="" class="img-responsive">
                     </a>
                     <h3 class="text-center">GameForce 2024</h3>
-                    <p>Een game conventie is iets wat ik nog nooit heb gedaan, bij deze opnieuw een item van de bucketlist.</p>
+                    <p>
+                        A gaming convention is something I have never done before, here's another bucket list item that I can check off.
+                    </p>
                 </div>
 
 
                 <!--Unwrap-->
                 <div class="col-xs-12 col-md-4">
                     <a href="https://www.unwrap.be/">
-                        <img src="./assets/images/Events/Unwrap Banner.png" alt="" class="img-responsive">
+                        <img src="../../assets/images/Events/Unwrap Banner.png" alt="" class="img-responsive">
                     </a>
                     <h3 class="text-center">Unwrap 25</h3>
-                    <p>Ik zal aanwezig zijn op het Unwrap festival. Daar zal ik panells volgen als ook netwerken.</p>
+                    <p>
+                        I will be present at the Unwrap festival. There I will follow panels as well as network.
+                    </p>
                 </div>
 
                 <!--Game Jam's-->
                 <div class="col-xs-12 col-md-4">
                     <a href="https://itch.io/jam/gbjam-12" target="_blank">
-                        <img src="./assets/images/Events/GB Jam Banner.jpg" alt="" class="img-responsive">
+                        <img src="../../assets/images/Events/GB Jam Banner.jpg" alt="" class="img-responsive">
                     </a>
                     <h3 class="text-center">Game Jam's</h3>
-                    <p>Na de examens plan ik om mee te doen aan enkele game jams.</p>
+                    <p>
+                        After the exams I plan to participate in some game jams.
+                    </p>
                 </div>
             </div>
         </div>
@@ -337,7 +344,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <h4>Social? Deze kant op meneer/mevrouw!</h4>
+                    <h4>Social? This way good sir/ fine lady!</h4>
                     <div>
                         <p>
                             <a href="https://x.com/BouckaertTanguy" target="_blank" class="fa-icon" title="">
@@ -354,7 +361,7 @@
                         </p>
                     </div>
                     <div>
-                        <p><small>© Website gemaakt door Tanguy Bouckaert </p>
+                        <p><small>© Website made by Tanguy Bouckaert </p>
                     </div>
 
                 </div>
@@ -370,4 +377,4 @@
     </script>
 
 
-    <script type="text/javascript" src="./main.faaf51f9.js"></script>
+    <script type="text/javascript" src="../../main.faaf51f9.js"></script>
