Added new game to portfolio

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <div class="row">
                 <div class="col-xs-12">
                     <h1 id="black">Tanguy Bouckaert</h1>
-                    <p class="">Web Dev & Game Designer</p>
+                    <h3 class="">Web Dev & Game Designer</h3>
 
                 </div>
             </div>
@@ -88,6 +88,22 @@
                 </div>
             </div>
             <div class="row">
+
+                <!-- Project HighFive -->
+                <div class="col-xs-12 col-md-4">
+                    <a href="https://tanguy-bouckaert.itch.io/five-a-space-adventure" target="_blank">
+                        <img src="./assets/images/Games/HighFiveSpaceGame.png" alt="" class="img-responsive"
+                            onmouseover="this.src='./assets/gifs/FiveSpaceAdventure.gif'"
+                            onmouseleave="this.src='./assets/images/Games/HighFiveSpaceGame.png'">
+                    </a>
+                    <h3 class="text-center">Five: Space Adventure</h3>
+                    <p>
+                        Dit was een klantproject waarbij we een leuk spel hebben gemaakt over dode hoeken van
+                        vrachtwagens.
+                        Het is gemaakt voor smartphones, maar het werkt ook op pc.
+                    </p>
+                </div>
+
                 <!-- GB Jam -->
                 <div class="col-xs-12 col-md-4">
                     <a href="https://tanguy-bouckaert.itch.io/into-the-depths" target="_blank">
@@ -102,41 +118,10 @@
                         droom waar te maken. </p>
                 </div>
 
-                <!-- Project In Search Of Light -->
-                <div class="col-xs-12 col-md-4">
-                    <a href="./pages/Empty.html"> <!-- Leeds to the devlog -->
-                        <img src="./assets/images/Games/Unity.png" class="project-img">
-                    </a>
-                    <h3 class="text-center">[Niet gepupliceerde] <br> Plane Game </h3>
-                    <p>
-                        Dit is een zetel-coöp, waarbij je een vliegtuig bestuurt. 
-                        Het doel van het spel is om je vriend neer te schieten.
-                    </p>
-                </div>
-
-                <!-- Project HighFive -->
-                <div class="col-xs-12 col-md-4">
-                    <a href="https://tanguy-bouckaert.itch.io/five-a-space-adventure" target="_blank">
-                        <img src="./assets/images/Games/HighFiveSpaceGame.png" alt="" class="img-responsive"
-                            onmouseover="this.src='./assets/gifs/FiveSpaceAdventure.gif'"
-                            onmouseleave="this.src='./assets/images/Games/HighFiveSpaceGame.png'">
-                    </a>
-                    <h3 class="text-center">Five: Space Adventure</h3>
-                    <p>
-                        Dit was een klantproject waarbij we een leuk spel hebben gemaakt over dode hoeken van vrachtwagens. 
-                        Het is gemaakt voor smartphones, maar het werkt ook op pc.
-                    </p>
-                </div>
 
 
 
-            </div>
 
-<br>
-<br>
-<br>
-
-            <div class="row">
                 <!-- Project In Search Of Light -->
                 <div class="col-xs-12 col-md-4">
                     <a href="https://tanguy-bouckaert.itch.io/in-search-of-light" target="_blank" q>
@@ -146,11 +131,52 @@
                     </a>
                     <h3 class="text-center">In Search Of Light</h3>
                     <p>
-                        "In Search Of Light" is een schoolproject, waarbij ik meerdere spel ideeën moesten prototypen om er dan
-                         één van uit te werken.
+                        "In Search Of Light" is een schoolproject, waarbij ik meerdere spel ideeën moesten prototypen om
+                        er dan
+                        één van uit te werken.
                     </p>
                 </div>
+
             </div>
+
+            <br>
+            <br>
+            <br>
+
+            <div class="row">
+
+                <!-- Phantom Property -->
+                <div class="col-xs-12 col-md-4">
+                    <a href="https://thistopshelf.itch.io/phantom-property"> <!-- Leeds to the devlog -->
+                        <img src="./assets/images/Games/PhantomProperty.png" class="project-img" 
+                        onmouseover="this.src='./assets/gifs/PhantomProperty.gif'"
+                        onmouseleave="this.src='./assets/images/Games/PhantomProperty.png'">
+                    </a>
+                    <h3 class="text-center"> Phantom Property </h3>
+                    <p>
+                        Deze game is gemaakt op 3 dagen met een team van 3 mensen waar ik voornaamelijk de organisatie van 
+                        het team heb gedaan. Verder heb ik de beweging en de animatie van de speler gemaakt.
+                    </p>
+                </div>
+
+                <!-- Project In Search Of Light -->
+                <div class="col-xs-12 col-md-4">
+                    <a href="./pages/Empty.html"> <!-- Leeds to the devlog -->
+                        <img src="./assets/images/Games/Unity.png" class="project-img">
+                    </a>
+                    <h3 class="text-center">[Niet gepupliceerde] <br> Plane Game </h3>
+                    <p>
+                        Dit is een zetel-coöp, waarbij je een vliegtuig bestuurt.
+                        Het doel van het spel is om je vriend neer te schieten.
+                    </p>
+                </div>
+
+
+
+
+            </div>
+
+
         </div>
     </div>
 
@@ -166,8 +192,9 @@
             <div class="row">
                 <!-- Hier komen mijn verschillende Skills -->
 
-                <!--Skill 1: Unity -->
-                <div class="col-xs-12 col-md-4">
+                <div class="col-lg-12">
+
+                    <!--Skill 1: Unity -->
                     <div class="fa-container">
                         <i class="fa fa-star-o fa-3x"></i>
                     </div>
@@ -175,10 +202,8 @@
                     <p>“Unity is far more superior to UE.”
                         <br> ― Some Guy on Reddit
                     </p>
-                </div>
 
-                <!--Skill 1: Blender -->
-                <div class="col-xs-12 col-md-4">
+                    <!--Skill 2: Blender -->
                     <div class="fa-container">
                         <i class="fa fa-star-o fa-3x"></i>
                     </div>
@@ -186,10 +211,10 @@
                     <p>“It all starts with a cube!”
                         <br> ― Some Guy on the internet
                     </p>
-                </div>
 
-                <!--Skill 1: PhotoShop -->
-                <div class="col-xs-12 col-md-4">
+
+                    <!--Skill 3: PhotoShop -->
+
                     <div class="fa-container">
                         <i class="fa fa-star-o fa-3x"></i>
                     </div>
@@ -200,10 +225,10 @@
                         target="_blank">
                         donna_shoots
                     </a>
-                </div>
 
-                <!--Skill 1: JAVA -->
-                <div class="col-xs-12 col-md-4">
+
+                    <!--Skill 4: JAVA -->
+
                     <div class="fa-container">
                         <i class="fa fa-star-o fa-3x"></i>
                     </div>
@@ -211,19 +236,24 @@
                     <p>“Software testing is a sport like hunting, it's bughunting.”
                         <br> ― Amit Kalantri
                     </p>
+
                 </div>
 
-                <!-- Skill 2: C# -->
-                <div class="col-xs-12 col-md-4">
+
+                <div class="col-lg-12">
+
+
+                    <!-- Skill 5: C# -->
+
                     <div class="fa-container">
                         <i class="fa fa-star-o fa-3x" aria-hidden="true"></i>
                     </div>
                     <h3 class="text-center">C#</h3>
                     <p>Q: Why do Java developers wear glasses? <br> <br> A: Because they don't C#</p>
-                </div>
 
-                <!-- Skill 3: JavaScript -->
-                <div class="col-xs-12 col-md-4">
+
+                    <!-- Skill 6: JavaScript -->
+
                     <div class="fa-container">
                         <i class="fa fa-star-o fa-3x" aria-hidden="true"></i>
                     </div>
@@ -231,29 +261,15 @@
                     <p> Javascript is the duct tape of the Internet.
                         <br> -Charlie Campbell
                     </p>
-                </div>
 
-            </div>
-
-            <!-- vuile opmaak moet nog opgemaakt worden -->
-
-            <div class="row">
-                <br><br><br>
-            </div>
-
-
-            <div class="row">
-                <!-- Skill 4: Css -->
-                <div class="col-xs-12 col-md-4">
+                    <!-- Skill 7: Css -->
                     <div class="fa-container">
                         <i class="fa fa-star-o fa-3x" aria-hidden="true"></i>
                     </div>
                     <h3 class="text-center">HTML/Css</h3>
                     <p> Whitout css the world would only be black and white</p>
-                </div>
 
-                <!-- Skill 3: TypeScript -->
-                <div class="col-xs-12 col-md-4">
+                    <!-- Skill 8: TypeScript -->
                     <div class="fa-container">
                         <i class="fa fa-star-o fa-3x" aria-hidden="true"></i>
                     </div>
@@ -265,6 +281,7 @@
 
             </div>
         </div>
+    </div>
     </div>
 
 
@@ -286,7 +303,8 @@
                         <img src="./assets/images/Events/GameForce_Banner.jpg" alt="" class="img-responsive">
                     </a>
                     <h3 class="text-center">GameForce 2024</h3>
-                    <p>Een game conventie is iets wat ik nog nooit heb gedaan, bij deze opnieuw een item van de bucketlist.</p>
+                    <p>Een game conventie is iets wat ik nog nooit heb gedaan, bij deze opnieuw een item van de
+                        bucketlist.</p>
                 </div>
 
 
