--- a/pages/localization/index_eng.html
+++ b/pages/localization/index_eng.html
@@ -46,15 +46,18 @@
 
                     <ul class="nav navbar-nav navbar-right">
                         <li style="margin-right: 1em;">
-                            <a href="../../pages/localization/AboutMe_eng.html" title="" class="btn btn-lg anchor-link">Who am I</a>
+                            <a href="../../pages/localization/AboutMe_eng.html" title=""
+                                class="btn btn-lg anchor-link">Who am I</a>
                         </li>
 
                         <li style="margin-right: 1em;">
-                            <a href="../../pages/localization/index_eng.html#MySkills" title="" class="btn btn-lg anchor-link">My Skills</a>
+                            <a href="../../pages/localization/index_eng.html#MySkills" title=""
+                                class="btn btn-lg anchor-link">My Skills</a>
                         </li>
 
                         <li style="margin-right: 1em;">
-                            <a href="../../pages/localization/index_eng.html#contact_me" title="" class="btn btn-lg anchor-link">Contact Me</a>
+                            <a href="../../pages/localization/index_eng.html#contact_me" title=""
+                                class="btn btn-lg anchor-link">Contact Me</a>
                         </li>
                     </ul>
 
@@ -89,6 +92,22 @@
                 </div>
             </div>
             <div class="row">
+
+                <!-- Project HighFive -->
+                <div class="col-xs-12 col-md-4">
+                    <a href="https://tanguy-bouckaert.itch.io/five-a-space-adventure" target="_blank">
+                        <img src="../../assets/images/Games/HighFiveSpaceGame.png" alt="" class="img-responsive"
+                            onmouseover="this.src='../../assets/gifs/FiveSpaceAdventure.gif'"
+                            onmouseleave="this.src='../../assets/images/Games/HighFiveSpaceGame.png'">
+                    </a>
+                    <h3 class="text-center">Five: Space Adventure</h3>
+                    <p>
+                        This was a client project where we had to make a fun game about blindspots of trucks. It's made
+                        for smartphones,
+                        but it'll also work on your pc.
+                    </p>
+                </div>
+
                 <!-- GB Jam -->
                 <div class="col-xs-12 col-md-4">
                     <a href="https://tanguy-bouckaert.itch.io/into-the-depths" target="_blank">
@@ -100,44 +119,11 @@
 
                     <h3 class="text-center">Into The Depths</h3>
                     <p> I always wanted to make a Gameboy game. The GB Jam has given me an opportunity to do this
-                        dream come true. 
+                        dream come true.
                     </p>
                 </div>
 
-                <!-- Project In Search Of Light -->
-                <div class="col-xs-12 col-md-4">
-                    <a href="../../pages/Empty.html"> <!-- Leeds to the devlog -->
-                        <img src="../../assets/images/Games/Unity.png" class="project-img">
-                    </a>
-                    <h3 class="text-center">[Not published] <br> Plane Game </h3>
-                    <p> 
-                        This is a couch co-op, where you controle a plane. The goal of the game is to shoot down your friend.
-                    </p>
-                </div>
-
-                <!-- Project HighFive -->
-                <div class="col-xs-12 col-md-4">
-                    <a href="https://tanguy-bouckaert.itch.io/five-a-space-adventure" target="_blank">
-                        <img src="../../assets/images/Games/HighFiveSpaceGame.png" alt="" class="img-responsive"
-                            onmouseover="this.src='../../assets/gifs/FiveSpaceAdventure.gif'"
-                            onmouseleave="this.src='../../assets/images/Games/HighFiveSpaceGame.png'">
-                    </a>
-                    <h3 class="text-center">Five: Space Adventure</h3>
-                    <p>
-                        This was a client project where we had to make a fun game about blindspots of trucks. It's made for smartphones, 
-                        but it'll also work on your pc.
-                    </p>
-                </div>
-
-
-
-            </div>
-
-<br>
-<br>
-<br>
-
-            <div class="row">
+                
                 <!-- Project In Search Of Light -->
                 <div class="col-xs-12 col-md-4">
                     <a href="https://tanguy-bouckaert.itch.io/in-search-of-light" target="_blank" q>
@@ -147,8 +133,46 @@
                     </a>
                     <h3 class="text-center">In Search Of Light</h3>
                     <p>
-                        In Search Of Light was a school project, where we had to prototype multiple game idea's and then eventual work out 
+                        In Search Of Light was a school project, where we had to prototype multiple game idea's and then
+                        eventual work out
                         one of them.
+                    </p>
+                </div>
+
+
+
+
+            </div>
+
+            <br>
+            <br>
+            <br>
+
+            <div class="row">
+
+                <!-- Phantom Property -->
+                <div class="col-xs-12 col-md-4">
+                    <a href="https://thistopshelf.itch.io/phantom-property"> <!-- Leeds to the devlog -->
+                        <img src="../../assets/images/Games/PhantomProperty.png" class="project-img" 
+                        onmouseover="this.src='../../assets/gifs/PhantomProperty.gif'"
+                        onmouseleave="this.src='../../assets/images/Games/PhantomProperty.png'">
+                    </a>
+                    <h3 class="text-center"> Phantom Property </h3>
+                    <p>
+                        This game was made in 3 days with a team of 3 people that I managed. I also programmed the movement 
+                        and did the animation of the player.
+                    </p>
+                </div>
+
+                <!-- Plane Game -->
+                <div class="col-xs-12 col-md-4">
+                    <a href="../../pages/Empty.html"> <!-- Leeds to the devlog -->
+                        <img src="../../assets/images/Games/Unity.png" class="project-img">
+                    </a>
+                    <h3 class="text-center">[Not published] <br> Plane Game </h3>
+                    <p>
+                        This is a couch co-op, where you controle a plane. The goal of the game is to shoot down your
+                        friend.
                     </p>
                 </div>
             </div>
@@ -288,7 +312,8 @@
                     </a>
                     <h3 class="text-center">GameForce 2024</h3>
                     <p>
-                        A gaming convention is something I have never done before, here's another bucket list item that I can check off.
+                        A gaming convention is something I have never done before, here's another bucket list item that
+                        I can check off.
                     </p>
                 </div>
 
