Finaly fixed the skills section, now they are stack by 4

--- a/index.html
+++ b/index.html
@@ -148,13 +148,14 @@
                 <!-- Phantom Property -->
                 <div class="col-xs-12 col-md-4">
                     <a href="https://thistopshelf.itch.io/phantom-property"> <!-- Leeds to the devlog -->
-                        <img src="./assets/images/Games/PhantomProperty.png" class="project-img" 
-                        onmouseover="this.src='./assets/gifs/PhantomProperty.gif'"
-                        onmouseleave="this.src='./assets/images/Games/PhantomProperty.png'">
+                        <img src="./assets/images/Games/PhantomProperty.png" class="project-img"
+                            onmouseover="this.src='./assets/gifs/PhantomProperty.gif'"
+                            onmouseleave="this.src='./assets/images/Games/PhantomProperty.png'">
                     </a>
                     <h3 class="text-center"> Phantom Property </h3>
                     <p>
-                        Deze game is gemaakt op 3 dagen met een team van 3 mensen waar ik voornaamelijk de organisatie van 
+                        Deze game is gemaakt op 3 dagen met een team van 3 mensen waar ik voornaamelijk de organisatie
+                        van
                         het team heb gedaan. Verder heb ik de beweging en de animatie van de speler gemaakt.
                     </p>
                 </div>
@@ -182,19 +183,20 @@
 
 
 
-    <div class="section-container" id="Mijn_Skills">
+    <div class="section-container">
         <div class="container">
             <div class="row">
                 <div class="col-xs-12 col-md-12 section-container-spacer">
                     <h2 class="text-center">Mijn Skills</h2>
                 </div>
             </div>
+
+            <!-- Hier komen mijn verschillende Skills -->
+
             <div class="row">
-                <!-- Hier komen mijn verschillende Skills -->
 
-                <div class="col-lg-12">
-
-                    <!--Skill 1: Unity -->
+                <!--Skill 1: Unity -->
+                <div class="col-xs-3">
                     <div class="fa-container">
                         <i class="fa fa-star-o fa-3x"></i>
                     </div>
@@ -202,8 +204,10 @@
                     <p>“Unity is far more superior to UE.”
                         <br> ― Some Guy on Reddit
                     </p>
+                </div>
 
-                    <!--Skill 2: Blender -->
+                <!--Skill 2: Blender -->
+                <div class="col-xs-3">
                     <div class="fa-container">
                         <i class="fa fa-star-o fa-3x"></i>
                     </div>
@@ -211,10 +215,10 @@
                     <p>“It all starts with a cube!”
                         <br> ― Some Guy on the internet
                     </p>
+                </div>
 
-
-                    <!--Skill 3: PhotoShop -->
-
+                <!--Skill 3: PhotoShop -->
+                <div class="col-xs-3">
                     <div class="fa-container">
                         <i class="fa fa-star-o fa-3x"></i>
                     </div>
@@ -225,10 +229,10 @@
                         target="_blank">
                         donna_shoots
                     </a>
+                </div>
 
-
-                    <!--Skill 4: JAVA -->
-
+                <!--Skill 4: JAVA -->
+                <div class="col-xs-3">
                     <div class="fa-container">
                         <i class="fa fa-star-o fa-3x"></i>
                     </div>
@@ -236,24 +240,26 @@
                     <p>“Software testing is a sport like hunting, it's bughunting.”
                         <br> ― Amit Kalantri
                     </p>
-
                 </div>
 
+            </div>
 
-                <div class="col-lg-12">
+            <br>
+            <br>
 
+            <div class="row">
 
-                    <!-- Skill 5: C# -->
-
+                <!-- Skill 5: C# -->
+                <div class="col-xs-3">
                     <div class="fa-container">
                         <i class="fa fa-star-o fa-3x" aria-hidden="true"></i>
                     </div>
                     <h3 class="text-center">C#</h3>
                     <p>Q: Why do Java developers wear glasses? <br> <br> A: Because they don't C#</p>
+                </div>
 
-
-                    <!-- Skill 6: JavaScript -->
-
+                <!-- Skill 6: JavaScript -->
+                <div class="col-xs-3">
                     <div class="fa-container">
                         <i class="fa fa-star-o fa-3x" aria-hidden="true"></i>
                     </div>
@@ -261,25 +267,30 @@
                     <p> Javascript is the duct tape of the Internet.
                         <br> -Charlie Campbell
                     </p>
+                </div>
 
-                    <!-- Skill 7: Css -->
+                <!-- Skill 7: Html/Css -->
+                <div class="col-xs-3">
                     <div class="fa-container">
                         <i class="fa fa-star-o fa-3x" aria-hidden="true"></i>
                     </div>
                     <h3 class="text-center">HTML/Css</h3>
                     <p> Whitout css the world would only be black and white</p>
+                </div>
 
-                    <!-- Skill 8: TypeScript -->
+                <!-- Skill 8: TypeScript -->
+                <div class="col-xs-3">
                     <div class="fa-container">
                         <i class="fa fa-star-o fa-3x" aria-hidden="true"></i>
                     </div>
                     <h3 class="text-center">TypeScript</h3>
                     <p> TypeScript is generaly used to make web applications. </p>
                     <a href="https://www.typescriptlang.org/" target="_blank">What is TypeScript?</a>
-
                 </div>
 
             </div>
+
+
         </div>
     </div>
     </div>
@@ -355,7 +366,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <h4>Social? Deze kant op meneer/mevrouw!</h4>
+                    <h4>Social? Deze kant op!</h4>
                     <div>
                         <p>
                             <a href="https://x.com/BouckaertTanguy" target="_blank" class="fa-icon" title="">
