--- a/pages/localization/index_eng.html
+++ b/pages/localization/index_eng.html
@@ -192,7 +192,7 @@
                 <!-- Hier komen mijn verschillende Skills -->
 
                 <!--Skill 1: Unity -->
-                <div class="col-xs-12 col-md-4">
+                <div class="col-xs-3">
                     <div class="fa-container">
                         <i class="fa fa-star-o fa-3x"></i>
                     </div>
@@ -203,7 +203,7 @@
                 </div>
 
                 <!--Skill 1: Blender -->
-                <div class="col-xs-12 col-md-4">
+                <div class="col-xs-3">
                     <div class="fa-container">
                         <i class="fa fa-star-o fa-3x"></i>
                     </div>
@@ -214,7 +214,7 @@
                 </div>
 
                 <!--Skill 1: PhotoShop -->
-                <div class="col-xs-12 col-md-4">
+                <div class="col-xs-3">
                     <div class="fa-container">
                         <i class="fa fa-star-o fa-3x"></i>
                     </div>
@@ -228,7 +228,7 @@
                 </div>
 
                 <!--Skill 1: JAVA -->
-                <div class="col-xs-12 col-md-4">
+                <div class="col-xs-3">
                     <div class="fa-container">
                         <i class="fa fa-star-o fa-3x"></i>
                     </div>
@@ -237,9 +237,14 @@
                         <br> ― Amit Kalantri
                     </p>
                 </div>
+            </div>
 
+            <br>
+            <br>
+
+            <div class="row">
                 <!-- Skill 2: C# -->
-                <div class="col-xs-12 col-md-4">
+                <div class="col-xs-3">
                     <div class="fa-container">
                         <i class="fa fa-star-o fa-3x" aria-hidden="true"></i>
                     </div>
@@ -248,7 +253,7 @@
                 </div>
 
                 <!-- Skill 3: JavaScript -->
-                <div class="col-xs-12 col-md-4">
+                <div class="col-xs-3">
                     <div class="fa-container">
                         <i class="fa fa-star-o fa-3x" aria-hidden="true"></i>
                     </div>
@@ -258,18 +263,8 @@
                     </p>
                 </div>
 
-            </div>
-
-            <!-- vuile opmaak moet nog opgemaakt worden -->
-
-            <div class="row">
-                <br><br><br>
-            </div>
-
-
-            <div class="row">
                 <!-- Skill 4: Css -->
-                <div class="col-xs-12 col-md-4">
+                <div class="col-xs-3">
                     <div class="fa-container">
                         <i class="fa fa-star-o fa-3x" aria-hidden="true"></i>
                     </div>
@@ -278,7 +273,7 @@
                 </div>
 
                 <!-- Skill 3: TypeScript -->
-                <div class="col-xs-12 col-md-4">
+                <div class="col-xs-3">
                     <div class="fa-container">
                         <i class="fa fa-star-o fa-3x" aria-hidden="true"></i>
                     </div>
@@ -288,7 +283,7 @@
 
                 </div>
 
-            </div>
+                </div>
         </div>
     </div>
 
@@ -369,7 +364,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <h4>Social? This way good sir/ fine lady!</h4>
+                    <h4>Social? This way!</h4>
                     <div>
                         <p>
                             <a href="https://x.com/BouckaertTanguy" target="_blank" class="fa-icon" title="">
